tests/golden/parse_errors/generic_constraint_missing_type.cd
fun bad<T:>(value: T): T {
  return value;
}
