tests/golden/parse_errors/generic_constraint_missing_type.err
Parse error at 1:11: expected type constraint after `:`, found Greater `>`
  fun bad<T:>(value: T): T {
            ^
